# QtBoilerplate

./: .gitignore  CMakeLists.txt  README.md  testing.cmake
include/: BoilerplateGlobal.h
include/boilerplate/algorithm/: Variadic.h
include/boilerplate/details/expected/: NonTrivialStorage.h  TrivialStorage.h  UnexpectedType.h
include/boilerplate/expected/: Expected.h
include/boilerplate/io/: QIODeviceHandler.h
include/boilerplate/strong/: StrongTypeDef.h
include/boilerplate/time/: DelayedInvocation.h
src/boilerplate/expected/: Expected.cpp
src/boilerplate/time/: DelayedInvocation.cpp
testing/: Tests.cpp
testing/tst/: Tst_Expected.cpp  Tst_Expected.h
testing/tst/mocs/: ExpectedMoc.cpp  ExpectedMoc.h
